--- a/css/notely.sidebar.css
+++ b/css/notely.sidebar.css
@@ -1,6 +1,6 @@
 .notely-shell-sidebar {
   width: 10%;
-  height: 100%;
+  height: inherit;
   border: 3px solid #000000;
   float: left;
 }
